; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_test_store.c_test_int8.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_test_store.c_test_int8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.test_int8.val = private unnamed_addr constant [5 x i32] [i32 0, i32 1, i32 -1, i32 128, i32 -127], align 16
@.str = private unnamed_addr constant [16 x i8] c"krb5_store_int8\00", align 1
@SEEK_SET = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"krb5_ret_int8\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"store and ret mismatch\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @test_int8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_int8(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca [5 x i32], align 16
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %9 = bitcast [5 x i32]* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %9, i8* align 16 bitcast ([5 x i32]* @__const.test_int8.val to i8*), i64 20, i1 false)
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @krb5_storage_truncate(i32* %10, i32 0)
  store i32 0, i32* %6, align 4
  br label %12

12:                                               ; preds = %52, %2
  %13 = load i32, i32* %6, align 4
  %14 = sext i32 %13 to i64
  %15 = icmp ult i64 %14, 0
  br i1 %15, label %16, label %55

16:                                               ; preds = %12
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [5 x i32], [5 x i32]* %7, i64 0, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @krb5_store_int8(i32* %17, i32 %21)
  store i64 %22, i64* %5, align 8
  %23 = load i64, i64* %5, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %16
  %26 = load i32, i32* %3, align 4
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @krb5_err(i32 %26, i32 1, i64 %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %25, %16
  %30 = load i32*, i32** %4, align 8
  %31 = load i32, i32* @SEEK_SET, align 4
  %32 = call i32 @krb5_storage_seek(i32* %30, i32 0, i32 %31)
  %33 = load i32*, i32** %4, align 8
  %34 = call i64 @krb5_ret_int8(i32* %33, i32* %8)
  store i64 %34, i64* %5, align 8
  %35 = load i64, i64* %5, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %29
  %38 = load i32, i32* %3, align 4
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @krb5_err(i32 %38, i32 1, i64 %39, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  br label %41

41:                                               ; preds = %37, %29
  %42 = load i32, i32* %8, align 4
  %43 = load i32, i32* %6, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds [5 x i32], [5 x i32]* %7, i64 0, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = icmp ne i32 %42, %46
  br i1 %47, label %48, label %51

48:                                               ; preds = %41
  %49 = load i32, i32* %3, align 4
  %50 = call i32 @krb5_errx(i32 %49, i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  br label %51

51:                                               ; preds = %48, %41
  br label %52

52:                                               ; preds = %51
  %53 = load i32, i32* %6, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %6, align 4
  br label %12

55:                                               ; preds = %12
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @krb5_storage_truncate(i32*, i32) #2

declare dso_local i64 @krb5_store_int8(i32*, i32) #2

declare dso_local i32 @krb5_err(i32, i32, i64, i8*) #2

declare dso_local i32 @krb5_storage_seek(i32*, i32, i32) #2

declare dso_local i64 @krb5_ret_int8(i32*, i32*) #2

declare dso_local i32 @krb5_errx(i32, i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
